# vsss-wasm

./: Cargo.toml  README.md  package-lock.json  package.json  vsssworld.rs  web.html
pkg/: package.json  vsss_wasm.d.ts  vsss_wasm.js  vsss_wasm_bg.wasm  vsss_wasm_bg.wasm.d.ts
samples/node-pkg/: app.mjs  package.json  vsss_wasm.d.ts  vsss_wasm.js  vsss_wasm_bg.wasm  vsss_wasm_bg.wasm-opt.wasm
samples/web-pkg/: vsss_wasm.d.ts  vsss_wasm.js  vsss_wasm_bg.wasm  vsss_wasm_bg.wasm-opt.wasm  web.html
src/: bindings.rs  lib.rs
tests/: browser.rs  node.rs
vsss_wasm/: README.md  package.json  vsss_wasm.core.wasm  vsss_wasm.core2.wasm  vsss_wasm.d.ts  vsss_wasm.mjs
vsss_wasm/sample/: app.mjs  package.json
wit/: world.wit
